Added javadoc & default end point

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,9 @@ local.properties
 .sts4-cache/
 
 # End of https://www.toptal.com/developers/gitignore/api/eclipse
+/target/
+/.classpath
+/.project
+/HELP.md
+/mvnw
+/mvnw.cmd
